update template engine

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,259 @@
 <%- include('header'); %>
+    <!-- slider section start -->
+    <section id="Slider">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 mt-5">
+                    <span class="sliderhead bg-white ">Never Stop Learning</span>
+                    <h1 class="sliderpara mt-4">Grow up Your Skills <br>by Online Courses<br> With Eduvi</h1>
+                    <p>Eduvi is a Global training provider based acros the Uk that specialises in accredited and bespoke
+                        traning courses.We crush the barriers togetting a degree.</p>
+                    <div class="search-item ">
+                        <select id="search-form">
+                            <option value="Kindergarten">Kindergarten</option>
+                            <option value="High School">High school</option>
+                            <option value="College">College</option>
+                        </select>
+                        <input type="search" placeholder="class/course" class="search-input" /><button
+                            class="search-btn"><i class="fa-solid fa-magnifying-glass"
+                                style="margin-right: 10px;"></i>Search</button>
+                    </div>
 
-<h1>This is My Home Page</h1>
+                </div>
+                <div class="col-md-5"><img class="sliderimg" src="../public/images/schoolboy.png" /></div>
+            </div>
+        </div>
+    </section>
+    <!-- Slider section end -->
 
+    <!-- Course section start -->
+    <section id="course">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <span class="coursehead">High quality video,audio <br /> <span>& live classes</span> </span>
+                    <p class="coursepara">High-defination video is video of higher resolution and quality than
+                        standard-defination. while
+                        there is no <br> standardized meaning for high-defination,generally any video image with
+                        considerably
+                        more than <br> 480 vertical scan lines or 576 lines is considered high-defination. </p>
+                    <button class="coursebtn mx-auto d-flex mt-4">Visit Courses</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Course section end -->
 
-
-
-<%- include('footer'); %>
+    <!-- image live class section start -->
+    <section id="teachimg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="box bg-white mx-auto d-flex">
+                        <img class="teacherimg mx-auto d-flex bg-white" src="../public/images/whiteboard.jpg" />
+                    </div>
+                </div>
+            </div>
+            <div class="row  gap-3 justify-content-center mt-4 text-center">
+                <div class="col-md-3 bg-white p-3 box1">
+                    <i class="fa-solid fa-volume-high"><span style="padding-left:10px ;">Audio Classes</span></i>
+                </div> 
+                <div class="col-md-3 bg-white p-3 box2">
+                    <i class="fas fa-video"><span style="padding-left:10px ;"> live Classes</span></i>
+                </div>
+                <div class="col-md-3 bg-white p-3 box3">
+                    <i class="fa-regular fa-circle-play " ><span style="padding-left:10px ;">Recorded Class</span></i>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <!-- image live class section end -->
+    <!-- card section start  -->
+    <section id="cards">
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-12 ">
+                    <h1 class="cardhead text-center ">Qualified lessons for students</h1>
+                    <p class="cardpara">A lesson class is a structured period of time where learning is intended to occur. <br>It involves one
+                        or more students being taught by a techer or instructor.</p>
+                </div>
+            </div>
+            <div class="row mt-3 ">
+                <div class="col-md-10 d-flex justify-content-center gap-5 mx-auto">
+                    <button class="cardbtn">Kindergarten</button>
+                    <button class="cardbtn">High School</button>
+                    <button class="cardbtn">College</button>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-3 bg-white " style="border-radius: 10px; height: 280px;">
+                    <h5 class="num1 mx-auto mt-4">1</h5>
+                    <h3 class="crd1head text-center pt-2">Standard One</h3>
+                    <p class="crd1para">Standard 1 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col-md-3  bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5  class="num2 mx-auto mt-4">2</h5>
+                    <h3 class="crd2head text-center pt-2">Standard Two</h3>
+                    <p class="crd2para">Standard 2 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd2btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col-md-3  bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5 class="num3 mx-auto mt-4">3</h5>
+                    <h3 class="crd3head text-center pt-2">Standard Three</h3>
+                    <p class="crd3para">Standard 3 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd3btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5 class="num4 mx-auto mt-4">4</h5>
+                    <h3  class="crd4head text-center pt-2">Standard Four</h3>
+                    <p class="crd4para">Standard 4 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5 class="num4 mx-auto mt-4">5</h5>
+                    <h3  class="crd4head text-center pt-2">Standard Five</h3>
+                    <p class="crd4para">Standard 5 is a foundation Standard that reflects 7 important concepts..</p>
+                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5 class="num4 mx-auto mt-4">6</h5>
+                    <h3 class="crd4head text-center pt-2">Standard Six</h3>
+                    <p class="crd4para">Standard 6 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col md 3  bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5  class="num4 mx-auto mt-4">7</h5>
+                    <h3 class="crd4head text-center pt-2">Standard Seven</h3>
+                    <p class="crd4para">Standard 7 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                </div>
+                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
+                    <h5 class="num4 mx-auto mt-4">8</h5>
+                    <h3 class="crd4head text-center pt-2">Standard Eight</h3>
+                    <p class="crd4para">Standard 8 builds on the foundations of Standard 1 and includes requirements</p>
+                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button>Visit More Classes</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- card section end  -->
+    <!-- skill section start -->
+    <!-- <section id="skill">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="col-md-7 mt-5">
+                        <span class="skillhead bg-white ">Colege Level</span>
+                        <h1 class="sliderpara mt-4">Don't waste time in <br>COVID-19 pandemic<br>Develop your skills.
+                        </h1>
+                        <p>Eduvi is a Global training provider based acros the Uk that specialises in accredited and
+                            bespoke traning courses.We crush the barriers togetting a degree.</p>
+                        <button>Registration Now</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="#" />
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- skill section end -->
+    <!-- career section start -->
+    <!-- <section id="career">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="#"/>
+                </div>
+                <div class="col-md-6">
+                    <h1 class="sliderpara mt-4">Want to Share your <br>knowledge? Join us<br>a Mentor</h1>
+                    <p>Eduvi is a Global training provider based acros the Uk that specialises in accredited and
+                        bespoke traning courses.We crush the barriers togetting a degree.</p>
+                        <button>Career Information</button>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- career section end -->
+    <!-- Subscribe section start -->
+    <!-- <section id="subscribe">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="#"/>1
+                    <img src="#"/>2
+                    <img src="#"/>3
+                </div>
+                <div class="col-md-8">
+                    <h1>Subscribe for Get update <br>Every New Courses</h1>
+                    <span>20k+ students daily learn with Eduvi.Subscribe for new courses.</span><br>
+                    <input type="email" placeholder="Enter your email"><button>Subscribe</button>
+                </div>
+                <div class="col-md-2">
+                    <img src="#"/>1
+                    <img src="#"/>2
+                    <img src="#"/>3
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- Subscribe section end -->
+    <!-- Footer Section Start -->
+    <!-- <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <a class="logo fw-bold " href="#"><img class="logoimg me-2 " src="../public/images/logo.png"/>Eduvi</a>
+                    <div class="social-icons">
+                        <a href="#" class="fa-brands fa-facebook-f"></a>
+                        <a href="#"  class="fa-brands fa-instagram"></a>
+                        <a href="#" class="fa-brands fa-twitter"></a>
+                        <a href="#" class="fa-brands fa-linkedin"></a>
+                    </div>
+                    <span>@2023 Eduvi.co</span>
+                    <p>Eduvi is a registered trademark of Eduvi.co</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Courses</h5>
+                        <ul>
+                            <li><a href="#">Classroom courses</a></li>
+                            <li><a href="#"> Virtual Classroom courses</a></li>
+                            <li><a href="#"> E-learning courses</a></li>
+                            <li><a href="#">Video courses</a></li>
+                            <li><a href="#">Offline courses</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Community</h5>
+                        <ul>
+                            <li><a href="#">Learners</a></li>
+                            <li><a href="#"> Partners</a></li>
+                            <li><a href="#">Developers</a></li>
+                            <li><a href="#">Transations</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Teaching Center</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3"> <h5>Community</h5>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#"> Professional Education</a></li>
+                            <li><a href="#">Courses</a></li>
+                            <li><a href="#">Admissions</a></li>
+                            <li><a href="#">Testimonial</a></li>
+                            <li><a href="#">Program</a></li>
+                        </ul></div>
+                </div>
+            </div>
+        </section> -->
+    <!-- Footer Section End -->
+    <%- include('footer'); %>
