--- a/public/style.css
+++ b/public/style.css
@@ -131,12 +131,12 @@
    
 }
 
+
 /* image-section end */
 
 /* card section start */
 #cards{
     background-color: #f7eff7;
-    padding: 80px auto; 
 }
 .cardhead{
     font-size: 50px;
@@ -150,19 +150,17 @@
     padding-top: 15px;  
 }
 .cardbtn{
-    width: 120px;
-    height: 50px;
+    padding: 10px 20px;
    border: none;
    font-weight: 600;
    font-size: 14px;
    border-radius: 10px; 
 }
-.cardbtn:nth-child(2){
+.cardbtn:hover{
     background-color: #ff5843;
     color: #ffff;
 }
-.num1{
-    background-color: orange;
+.num{
     border-radius: 50%;
     width: 40px;
     height: 40px;
@@ -170,8 +168,12 @@
     padding-top: 8px;
     color: #fff;
 }
+.num1{
+    background-color: orange; 
+   
+}
 .crd1head{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
     
 }
@@ -181,108 +183,187 @@
     color: #a7a2a8;
 }
 .crd1btn{
-    width: 150px;
-    height: 40px;
+   padding: 10px 20px;
    font-weight: 600;
    font-size: 14px;
    border-radius: 10px; 
-  padding-left: 30px;
-  padding-top: 10px;
-  border: 2px solid #aa49f0;
+ border: 1px solid #aa49f0;
   color: #aa49f0;
 }
-.num2{
-    background-color: rgba(39, 35, 35, 0.734);
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding-top: 8px;
-    color: #fff;
-}
-.crd2head{
-    font-size: 30px;
-    font-weight: bold;
-    
-}
-.crd2para{
-    font-size: 15px;
-    text-align: center;
-    color: #a7a2a8;
-}
-.crd2btn{
-    width: 150px;
-    height: 40px;
-   font-weight: 600;
-   font-size: 14px;
-   border-radius: 10px; 
-  padding-left: 30px;
-  padding-top: 10px;
-  border: 2px solid #aa49f0;
-  color: #aa49f0;
-}
-.num3{
-    background-color: #00E9ca;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding-top: 8px;
-    color: #fff;
-}
-.crd3head{
-    font-size: 30px;
-    font-weight: bold;
-    
-}
-.crd3para{
-    font-size: 15px;
-    text-align: center;
-    color: #a7a2a8;
-}
-.crd3btn{
-    width: 150px;
-    height: 40px;
-   font-weight: 600;
-   font-size: 14px;
-   border-radius: 10px; 
-  padding-left: 30px;
-  padding-top: 10px;
-  border: 2px solid #aa49f0;
-  color: #aa49f0;
-}
-.crd3btn:hover{
+.crd1btn:hover{
     background-color: #aa49f0;
     color: #fff;
 }
-.num4{
-    background-color: #404141;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding-top: 8px;
-    color: #fff;
+.num2{
+    background-color: rgba(39, 35, 35, 0.734);
+   
 }
-.crd4head{
-    font-size: 30px;
-    font-weight: bold;
+.num3{
+    background-color: #00E9ca;
     
 }
-.crd4para{
-    font-size: 15px;
-    text-align: center;
-    color: #a7a2a8;
+
+.num4{
+    background-color: #404141;  
 }
-.crd4btn{
-    width: 150px;
-    height: 40px;
-   font-weight: 600;
-   font-size: 14px;
-   border-radius: 10px; 
-  padding-left: 30px;
-  padding-top: 10px;
-  border: 2px solid #aa49f0;
-  color: #aa49f0;
+.num5{
+    background-color: #00E9ca;
+    
 }
+.num6{
+    background-color: orange;
+   
+}
+.num7{
+    background-color: red;
+  
+}
+.num8{
+    background-color: rgb(237, 113, 18);
+   
+}
+
+.curbtn{
+   
+        padding: 10px 20px;
+        font-weight: 600;
+        font-size: 14px;
+        border-radius: 10px; 
+      border: 1px solid #aa49f0;
+       color: #aa49f0;   
+}
+.curbtn:hover{
+    background-color: #aa49f0;
+    color: #fff;
+}
+
 /* card section end */
+/* Skill Section Start */
+#skill{
+    background-color: #f7eff7;
+    
+}
+.regbox{
+   
+    margin-top: 60px;
+}
+.skillbox{
+    color: #aa49f0;
+    padding: 15px;
+    margin-left: 40px;
+    border-radius: 10px;
+    background-color: rgb(227, 227, 255);
+}
+.skillhead{
+    margin-top: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin-left: 40px;
+}
+.skillpara{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: left;
+    padding-top: 15px;
+    margin-left: 40px;
+    color: rgb(144, 144, 144);
+   
+}
+.regbtn{
+   padding: 10px 20px;
+    border: none;
+    background-color: #aa49f0;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+     margin-left: 40px;
+   
+    
+
+}
+
+.skillimg{
+    width: 567px;
+    height: 425px;
+    color: rgb(144, 144, 144);
+}
+
+/* Skill Section end */
+
+/* career section start */
+#career{
+    padding: 80px auto;
+    background-color: #f7eff7;
+    
+}
+.careerimg{
+    width: 300px;
+    height: 300px;
+    margin-top: 50px;
+    margin-left: 100px;
+    border-radius: 50%;
+    border-bottom-right-radius: 10px;
+    background-image: linear-gradient(#ff624b, rgb(246, 221, 215));
+   
+}
+.careerhead{
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+}
+.careerpara{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: left;
+    padding-top: 15px;
+    color: rgb(144, 144, 144);
+}
+.careerbtn{
+    width: 150px;
+    height: 55px;
+    border: none;
+    background-color: #aa49f0;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 100px;
+  
+}
+/* career section end */
+
+/*Subscribe Section Start  */
+#subscribe{
+   
+    background-color: #f7eff7;
+}
+.subhead{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-weight: bold;
+    padding-top:50px
+}
+.subpara{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: rgb(144, 144, 144);
+    padding-left: 150px;
+}
+/*Subscribe Section end  */
