--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,13 +56,13 @@
             </div>
             <div class="row  gap-3 justify-content-center mt-4 text-center">
                 <div class="col-md-3 bg-white p-3 box1">
-                    <i class="fa-solid fa-volume-high"><span style="padding-left:10px ;">Audio Classes</span></i>
-                </div> 
+                    <i class="fa-solid fa-volume-high" style="color: red;"><span style="padding-left:10px;color: #000;font-family: Arial, Helvetica, sans-serif;font-weight: 700;" >Audio Classes</span></i>
+                </div>
                 <div class="col-md-3 bg-white p-3 box2">
-                    <i class="fas fa-video"><span style="padding-left:10px ;"> live Classes</span></i>
+                    <i class="fas fa-video" style="color: #aa49f0;"><span style="padding-left:10px ; color: #000;font-family: Arial, Helvetica, sans-serif; font-weight: 700;"> live Classes</span></i>
                 </div>
                 <div class="col-md-3 bg-white p-3 box3">
-                    <i class="fa-regular fa-circle-play " ><span style="padding-left:10px ;">Recorded Class</span></i>
+                    <i class="fa fa-circle-play "style="color:rgb(89, 190, 0);"><span style="padding-left:10px ; color: #000;font-family: Arial, Helvetica, sans-serif; font-weight: 700;">Recorded Class</span></i>
                 </div>
             </div>
         </div>
@@ -75,127 +75,162 @@
             <div class="row ">
                 <div class="col-md-12 ">
                     <h1 class="cardhead text-center ">Qualified lessons for students</h1>
-                    <p class="cardpara">A lesson class is a structured period of time where learning is intended to occur. <br>It involves one
+                    <p class="cardpara">A lesson class is a structured period of time where learning is intended to
+                        occur. <br>It involves one
                         or more students being taught by a techer or instructor.</p>
                 </div>
             </div>
             <div class="row mt-3 ">
-                <div class="col-md-10 d-flex justify-content-center gap-5 mx-auto">
+
+                <div class="col-md-12 gap-2 mx-auto justify-content-center d-flex">
                     <button class="cardbtn">Kindergarten</button>
                     <button class="cardbtn">High School</button>
                     <button class="cardbtn">College</button>
                 </div>
+
             </div>
-            <div class="row mt-5">
-                <div class="col-md-3 bg-white " style="border-radius: 10px; height: 280px;">
-                    <h5 class="num1 mx-auto mt-4">1</h5>
-                    <h3 class="crd1head text-center pt-2">Standard One</h3>
-                    <p class="crd1para">Standard 1 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd1btn mx-auto d-flex ">Class Details</button>
+            <div class="row mt-5  ">
+                <div class="col-md-3  ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px; padding-top: 2px;">
+                        <h5 class="num1 num mx-auto mt-4">1</h5>
+                        <h3 class="crd1head text-center pt-2">Standard One</h3>
+                        <p class="crd1para">Standard 1 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col-md-3  bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5  class="num2 mx-auto mt-4">2</h5>
-                    <h3 class="crd2head text-center pt-2">Standard Two</h3>
-                    <p class="crd2para">Standard 2 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd2btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3 ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num2 num mx-auto mt-4">2</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Two</h3>
+                        <p class="crd1para">Standard 2 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col-md-3  bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5 class="num3 mx-auto mt-4">3</h5>
-                    <h3 class="crd3head text-center pt-2">Standard Three</h3>
-                    <p class="crd3para">Standard 3 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd3btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3 ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num3 num mx-auto mt-4">3</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Three</h3>
+                        <p class="crd1para">Standard 3 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5 class="num4 mx-auto mt-4">4</h5>
-                    <h3  class="crd4head text-center pt-2">Standard Four</h3>
-                    <p class="crd4para">Standard 4 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3 ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num4 num mx-auto mt-4">4</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Four</h3>
+                        <p class="crd1para">Standard 4 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
             </div>
-            <div class="row mt-4">
-                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5 class="num4 mx-auto mt-4">5</h5>
-                    <h3  class="crd4head text-center pt-2">Standard Five</h3>
-                    <p class="crd4para">Standard 5 is a foundation Standard that reflects 7 important concepts..</p>
-                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+            <div class="row mt-4 ">
+                <div class="col-md-3 ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num5 num mx-auto mt-4">5</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Five</h3>
+                        <p class="crd1para">Standard 5 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5 class="num4 mx-auto mt-4">6</h5>
-                    <h3 class="crd4head text-center pt-2">Standard Six</h3>
-                    <p class="crd4para">Standard 6 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3">
+                    <div class=" bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num6 num mx-auto mt-4">6</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Six</h3>
+                        <p class="crd1para">Standard 6 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col md 3  bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5  class="num4 mx-auto mt-4">7</h5>
-                    <h3 class="crd4head text-center pt-2">Standard Seven</h3>
-                    <p class="crd4para">Standard 7 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3  ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num7 num mx-auto mt-4">7</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Seven</h3>
+                        <p class="crd1para">Standard 7 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
-                <div class="col md 3 bg-white"style="border-radius: 10px; height: 280px;">
-                    <h5 class="num4 mx-auto mt-4">8</h5>
-                    <h3 class="crd4head text-center pt-2">Standard Eight</h3>
-                    <p class="crd4para">Standard 8 builds on the foundations of Standard 1 and includes requirements</p>
-                    <button class="crd4btn mx-auto d-flex ">Class Details</button>
+                <div class="col-md-3 ">
+                    <div class="bg-white" style="border-radius: 10px; height: 280px;padding-top: 2px">
+                        <h5 class="num8 num mx-auto mt-4">8</h5>
+                        <h3 class="crd1head text-center pt-2">Standard Eight</h3>
+                        <p class="crd1para">Standard 8 builds on the foundations of Standard 1 and includes requirements
+                        </p>
+                        <button class="crd1btn mx-auto d-flex ">Class Details</button>
+                    </div>
+
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
-                    <button>Visit More Classes</button>
+                <div class="col-md-12 mt-4 mx-auto d-flex justify-content-center">
+                    <button class="curbtn mb-5">Visit More Classes</button>
                 </div>
             </div>
         </div>
     </section>
     <!-- card section end  -->
     <!-- skill section start -->
-    <!-- <section id="skill">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="col-md-7 mt-5">
-                        <span class="skillhead bg-white ">Colege Level</span>
-                        <h1 class="sliderpara mt-4">Don't waste time in <br>COVID-19 pandemic<br>Develop your skills.
-                        </h1>
-                        <p>Eduvi is a Global training provider based acros the Uk that specialises in accredited and
-                            bespoke traning courses.We crush the barriers togetting a degree.</p>
-                        <button>Registration Now</button>
+    <section id="skill">
+        <div class="container ">
+            <div class="row " style=" background-color: rgb(207, 207, 207); border-radius: 10px; height: 500px;"  >
+                <div class="col-md-6 pt-5">
+                    <div class="regbox ">
+                            <span class="skillbox  ">College Level</span>
+                            <h1 class="skillhead">Don't waste time in <br>COVID-19 pandemic.<br>Develop your skills.
+                            </h1>
+                            <p class="skillpara">High defination video is video of higher resolution and quality than standard defination. while
+                             there is no standardized meaning for high defination, generally any video.</p>
+                            <button class="regbtn ">Registration Now</button>
                     </div>
+                        
                 </div>
-                <div class="col-md-6">
-                    <img src="#" />
+                <div class="col-md-6 pt-5">
+                    <img class="skillimg" src="../public/images/skillimage.png" />
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- skill section end -->
     <!-- career section start -->
-    <!-- <section id="career">
+    <section id="career">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="#"/>
+                <div class="col-md-6 pt-5">
+                    <img class="careerimg" src="../public/images/careerimg.png"/>
                 </div>
-                <div class="col-md-6">
-                    <h1 class="sliderpara mt-4">Want to Share your <br>knowledge? Join us<br>a Mentor</h1>
-                    <p>Eduvi is a Global training provider based acros the Uk that specialises in accredited and
-                        bespoke traning courses.We crush the barriers togetting a degree.</p>
-                        <button>Career Information</button>
+                <div class="col-md-6 pt-5">
+                    <h1 class="careerhead ">Want to Share your <br>knowledge? Join us<br>a Mentor</h1>
+                    <p class="careerpara">High defination video is video of higher resolution and quality than standard defination. while there is no standardized meaning for high defination, generally any video.</p>
+                        <button class="careerbtn" >Career Information</button>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- career section end -->
     <!-- Subscribe section start -->
-    <!-- <section id="subscribe">
+    <section id="subscribe">
         <div class="container">
-            <div class="row">
+            <div class="row "style="background-color:#0b043e;border-radius:10px">
                 <div class="col-md-2">
                     <img src="#"/>1
                     <img src="#"/>2
                     <img src="#"/>3
                 </div>
                 <div class="col-md-8">
-                    <h1>Subscribe for Get update <br>Every New Courses</h1>
-                    <span>20k+ students daily learn with Eduvi.Subscribe for new courses.</span><br>
+                    <h5 class="subhead">Subscribe for Get update <br> Every New Courses</h5>
+                    <span class="subpara ">20k+ students daily learn with Eduvi.Subscribe for new courses.</span><br>
                     <input type="email" placeholder="Enter your email"><button>Subscribe</button>
                 </div>
                 <div class="col-md-2">
@@ -205,7 +240,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Subscribe section end -->
     <!-- Footer Section Start -->
     <!-- <section id="footer">
