--- a/views/index.ejs
+++ b/views/index.ejs
@@ -222,44 +222,44 @@
     <!-- Subscribe section start -->
     <section id="subscribe">
         <div class="container">
-            <div class="row "style="background-color:#0b043e;border-radius:10px">
-                <div class="col-md-2">
-                    <img src="#"/>1
-                    <img src="#"/>2
-                    <img src="#"/>3
+            <div class="row "style="background-color:#0b043e;border-radius:10px;height: 320px;">
+                <div class="col-md-2"style="position: relative;">
+                    <img class=" img1" src="../public/images/1.png"/>
+                    <img class="img2" src="../public/images/2.png"/>
+                    <img class="img3" src="../public/images/3.png"/>
                 </div>
                 <div class="col-md-8">
                     <h5 class="subhead">Subscribe for Get update <br> Every New Courses</h5>
                     <span class="subpara ">20k+ students daily learn with Eduvi.Subscribe for new courses.</span><br>
-                    <input type="email" placeholder="Enter your email"><button>Subscribe</button>
+                    <input class="emailinput mt-4 " type="email" placeholder="Enter your email"><button class="subbtn">Subscribe</button>
                 </div>
-                <div class="col-md-2">
-                    <img src="#"/>1
-                    <img src="#"/>2
-                    <img src="#"/>3
+                <div class="col-md-2"style="position: relative;">
+                    <img class="img4" src="../public/images/2.png "/>
+                    <img class="img5" src="../public/images/3.png"/>
+                    <img class="img6" src="../public/images/1.png"/>
                 </div>
             </div>
         </div>
     </section>
     <!-- Subscribe section end -->
     <!-- Footer Section Start -->
-    <!-- <section id="footer">
+    <section id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
-                        <a class="logo fw-bold " href="#"><img class="logoimg me-2 " src="../public/images/logo.png"/>Eduvi</a>
-                    <div class="social-icons">
-                        <a href="#" class="fa-brands fa-facebook-f"></a>
+                    <div class="col-md-3 pt-5">
+                        <a class="logo fw-bold " href="#"><img class="logoimg2 me-2 " src="../public/images/logo.png"/>Eduvi</a>
+                    <div class="social-icons mb-3">
+                        <a href="#" class="fa-brands fa-facebook-f " ></a>
                         <a href="#"  class="fa-brands fa-instagram"></a>
                         <a href="#" class="fa-brands fa-twitter"></a>
                         <a href="#" class="fa-brands fa-linkedin"></a>
                     </div>
-                    <span>@2023 Eduvi.co</span>
-                    <p>Eduvi is a registered trademark of Eduvi.co</p>
+                    <span class="copyright">@2023 Eduvi.co</span>
+                    <p class="copypara">Eduvi is a registered <br>trademark of Eduvi.co</p>
                     </div>
-                    <div class="col-md-3">
-                        <h5>Courses</h5>
-                        <ul>
+                    <div class="col-md-3  pt-5">
+                        <h5 class="foothead">Courses</h5>
+                        <ul class="list1">
                             <li><a href="#">Classroom courses</a></li>
                             <li><a href="#"> Virtual Classroom courses</a></li>
                             <li><a href="#"> E-learning courses</a></li>
@@ -267,9 +267,9 @@
                             <li><a href="#">Offline courses</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
-                        <h5>Community</h5>
-                        <ul>
+                    <div class="col-md-3  pt-5">
+                        <h5 class="foothead">Community</h5>
+                        <ul class="list1">
                             <li><a href="#">Learners</a></li>
                             <li><a href="#"> Partners</a></li>
                             <li><a href="#">Developers</a></li>
@@ -278,8 +278,9 @@
                             <li><a href="#">Teaching Center</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3"> <h5>Community</h5>
-                        <ul>
+                    <div class="col-md-3  pt-5">
+                         <h5 class="foothead">Quick Links</h5>
+                        <ul class="list1">
                             <li><a href="#">Home</a></li>
                             <li><a href="#"> Professional Education</a></li>
                             <li><a href="#">Courses</a></li>
@@ -289,6 +290,6 @@
                         </ul></div>
                 </div>
             </div>
-        </section> -->
+        </section>
     <!-- Footer Section End -->
     <%- include('footer'); %>
