--- a/views/Nav.ejs
+++ b/views/Nav.ejs
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav fw-bold mx-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  active" aria-current="page" href="#">Shop</a>
+            <a class="nav-link  " aria-current="page" href="#">Shop</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">For Kindergarten</a>
